apps/bgin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bgin-api
  namespace: apps
  labels:
    app.kubernetes.io/name: bgin-api
    app.kubernetes.io/part-of: bgin
spec:
  selector:
    app.kubernetes.io/name: bgin-api
  ports:
    - name: http
      port: 3300
      targetPort: 3300
